# NameTag-firmware

./: .gitmodules  CMakeLists.txt  README.md  avr.h  main.c  main.cpp  maintest.cpp  matrixdisplay.cpp  matrixdisplay.h  names.h  nametag.cpp  nametag.h  nametag_sm.cpp  nametag_sm.h  statemachine.h
